--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!--script type="text/babel" src="scripts/CommentBox.js"></script-->
     <script type="text/babel">
       // To get started with this tutorial running your own code, simply remove
-      // the script tag loading scripts/example.js and start writing code here.
+      // the script tag loadiffffng scripts/example.js and start writing code here.
     </script>
   </body>
 </html> 
