--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>React Tutorial</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/2.5.2/ReactRouter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
@@ -14,10 +15,5 @@
   <body>
     <div id="content"></div>
     <script type="text/babel" src="js/scripts.min.js"></script>
-    <!--script type="text/babel" src="scripts/CommentBox.js"></script-->
-    <script type="text/babel">
-      // To get started with this tutorial running your own code, simply remove
-      // the script tag loadiffffng scripts/example.js and start writing code here.
-    </script>
   </body>
 </html> 
