--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="content"></div>
+    <script type="application/javascript" src="js/libs.min.js"></script>
     <script type="text/babel" src="js/scripts.min.js"></script>
   </body>
 </html> 
