--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>React Tutorial</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/2.5.2/ReactRouter.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
+    <title>Recipes</title>
+    
     <link rel="stylesheet" type="text/css" href="/css/style.css">
   </head>
   <body>
     <div id="content"></div>
-    <script type="application/javascript" src="/js/libs.min.js"></script>
-    <script type="text/babel" src="/js/scripts.min.js"></script>
+    <script type="application/javascript" src="/js/bundle.js"></script>
   </body>
 </html> 
